[package]
name = "ckb-bin"
version = "0.110.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
description = "CKB executable."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
clap = { version = "4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_plain = "0.3.0"
toml = "0.5"
ckb-app-config = { path = "../util/app-config", version = "= 0.110.0-pre" }
ckb-logger = { path = "../util/logger", version = "= 0.110.0-pre" }
ckb-logger-service = { path = "../util/logger-service", version = "= 0.110.0-pre" }
ckb-metrics-service = { path = "../util/metrics-service", version = "= 0.110.0-pre" }
ckb-util = { path = "../util", version = "= 0.110.0-pre" }
ckb-types = { path = "../util/types", version = "= 0.110.0-pre" }
ckb-channel = { path = "../util/channel", version = "= 0.110.0-pre" }
ckb-jsonrpc-types = { path = "../util/jsonrpc-types", version = "= 0.110.0-pre" }
ckb-chain = { path = "../chain", version = "= 0.110.0-pre" }
ckb-shared = { path = "../shared", version = "= 0.110.0-pre" }
ckb-store = { path = "../store", version = "= 0.110.0-pre" }
ckb-chain-spec = {path = "../spec", version = "= 0.110.0-pre"}
ckb-miner = { path = "../miner", version = "= 0.110.0-pre" }
ckb-network = { path = "../network", version = "= 0.110.0-pre"}
ckb-resource = { path = "../resource", version = "= 0.110.0-pre"}
ctrlc = { version = "3.1", features = ["termination"] }
ckb-instrument = { path = "../util/instrument", version = "= 0.110.0-pre", features = ["progress_bar"] }
ckb-build-info = { path = "../util/build-info", version = "= 0.110.0-pre" }
ckb-memory-tracker = { path = "../util/memory-tracker", version = "= 0.110.0-pre" }
ckb-chain-iter = { path = "../util/chain-iter", version = "= 0.110.0-pre" }
ckb-verification-traits = { path = "../verification/traits", version = "= 0.110.0-pre" }
ckb-async-runtime = { path = "../util/runtime", version = "= 0.110.0-pre" }
ckb-db = { path = "../db", version = "= 0.110.0-pre" }
ckb-launcher = { path = "../util/launcher", version = "= 0.110.0-pre" }
base64 = "0.21.0"
tempfile.workspace = true
rayon = "1.0"
sentry = { version = "0.26.0", optional = true }
is-terminal = "0.4.7"
fdlimit = "0.2.1"

[features]
deadlock_detection = ["ckb-util/deadlock_detection"]
profiling = ["ckb-memory-tracker/profiling"]
with_sentry = ["sentry", "ckb-launcher/with_sentry", "ckb-network/with_sentry", "ckb-app-config/with_sentry", "ckb-logger-service/with_sentry"]
with_dns_seeding = ["ckb-network/with_dns_seeding"]
portable = ["ckb-db/portable", "ckb-launcher/portable"]
march-native = ["ckb-db/march-native", "ckb-launcher/march-native"]
