[package]
name = "ckb-bin"
version = "0.111.0-rc8"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
description = "CKB executable."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
clap = { version = "4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_plain = "0.3.0"
toml = "0.5"
ckb-app-config = { path = "../util/app-config", version = "= 0.111.0-rc8" }
ckb-logger = { path = "../util/logger", version = "= 0.111.0-rc8" }
ckb-logger-service = { path = "../util/logger-service", version = "= 0.111.0-rc8" }
ckb-metrics-service = { path = "../util/metrics-service", version = "= 0.111.0-rc8" }
ckb-util = { path = "../util", version = "= 0.111.0-rc8" }
ckb-types = { path = "../util/types", version = "= 0.111.0-rc8" }
ckb-channel = { path = "../util/channel", version = "= 0.111.0-rc8" }
ckb-jsonrpc-types = { path = "../util/jsonrpc-types", version = "= 0.111.0-rc8" }
ckb-chain = { path = "../chain", version = "= 0.111.0-rc8" }
ckb-shared = { path = "../shared", version = "= 0.111.0-rc8" }
ckb-store = { path = "../store", version = "= 0.111.0-rc8" }
ckb-chain-spec = {path = "../spec", version = "= 0.111.0-rc8"}
ckb-miner = { path = "../miner", version = "= 0.111.0-rc8" }
ckb-network = { path = "../network", version = "= 0.111.0-rc8"}
ckb-resource = { path = "../resource", version = "= 0.111.0-rc8"}
ctrlc = { version = "3.1", features = ["termination"] }
ckb-instrument = { path = "../util/instrument", version = "= 0.111.0-rc8", features = ["progress_bar"] }
ckb-build-info = { path = "../util/build-info", version = "= 0.111.0-rc8" }
ckb-memory-tracker = { path = "../util/memory-tracker", version = "= 0.111.0-rc8" }
ckb-chain-iter = { path = "../util/chain-iter", version = "= 0.111.0-rc8" }
ckb-verification-traits = { path = "../verification/traits", version = "= 0.111.0-rc8" }
ckb-async-runtime = { path = "../util/runtime", version = "= 0.111.0-rc8" }
ckb-launcher = { path = "../util/launcher", version = "= 0.111.0-rc8" }
base64 = "0.21.0"
tempfile.workspace = true
rayon = "1.0"
sentry = { version = "0.26.0", optional = true }
is-terminal = "0.4.7"
fdlimit = "0.2.1"

[features]
deadlock_detection = ["ckb-util/deadlock_detection"]
profiling = ["ckb-memory-tracker/profiling"]
with_sentry = ["sentry", "ckb-launcher/with_sentry", "ckb-network/with_sentry", "ckb-app-config/with_sentry", "ckb-logger-service/with_sentry"]
with_dns_seeding = ["ckb-network/with_dns_seeding"]
portable = ["ckb-launcher/portable"]
march-native = ["ckb-launcher/march-native"]
