[package]
name = "ckb-bin"
version.workspace = true
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
description = "CKB executable."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
clap = { workspace = true, features = ["string", "wrap_help"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_plain.workspace = true
toml.workspace = true
ckb-app-config.workspace = true
ckb-logger.workspace = true
ckb-logger-service.workspace = true
ckb-metrics-service.workspace = true
ckb-util.workspace = true
ckb-types.workspace = true
ckb-channel.workspace = true
ckb-jsonrpc-types.workspace = true
ckb-chain.workspace = true
ckb-shared.workspace = true
ckb-store.workspace = true
ckb-chain-spec.workspace = true
ckb-miner.workspace = true
ckb-network.workspace = true
ckb-resource.workspace = true
ctrlc = { workspace = true, features = ["termination"] }
ckb-instrument = { workspace = true, features = ["progress_bar"] }
ckb-build-info.workspace = true
ckb-memory-tracker.workspace = true
ckb-chain-iter.workspace = true
ckb-verification-traits.workspace = true
ckb-async-runtime.workspace = true
ckb-migrate.workspace = true
ckb-launcher.workspace = true
ckb-constant.workspace = true
base64.workspace = true
tempfile.workspace = true
rayon.workspace = true
sentry = { workspace = true, optional = true }
is-terminal.workspace = true
fdlimit.workspace = true
ckb-stop-handler.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(target_os="windows"))'.dependencies]
daemonize-me = { version = "2" }
nix = { version = "0.29.0", default-features = false, features = ["signal"] }
colored = "2.0"

[features]
deadlock_detection = ["ckb-util/deadlock_detection"]
profiling = ["ckb-memory-tracker/profiling", "ckb-shared/stats"]
with_sentry = [
    "sentry",
    "ckb-launcher/with_sentry",
    "ckb-network/with_sentry",
    "ckb-app-config/with_sentry",
    "ckb-logger-service/with_sentry",
]
with_dns_seeding = ["ckb-network/with_dns_seeding"]
portable = ["ckb-launcher/portable"]
march-native = ["ckb-launcher/march-native"]
