[package]
name = "ckb-core"
version = "0.19.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
bincode = "1.1"
numext-fixed-hash = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
numext-fixed-uint = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
ckb-hash = {path = "../util/hash"}
ckb-occupied-capacity = { path = "../util/occupied-capacity"}
bit-vec = "0.5.1"
crossbeam-channel = "0.3"
ckb-util = { path = "../util" }
fnv = "1.0.3"
ckb-merkle-tree = {path = "../util/merkle-tree"}
faster-hex = "0.3"
bytes = { version="0.4.12", features = ["serde"] }
failure = "0.1.5"
