[package]
name = "ckb-db-migration"
version = "0.111.0-rc5"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
description = "TODO(doc): @quake crate description"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-db = { path = "../db", version = "= 0.111.0-rc5" }
ckb-logger = { path = "../util/logger", version = "= 0.111.0-rc5" }
ckb-error = { path = "../error", version = "= 0.111.0-rc5" }
ckb-db-schema = { path = "../db-schema", version = "= 0.111.0-rc5" }
indicatif = "0.16"
console = ">=0.9.1, <1.0.0"

[dev-dependencies]
tempfile.workspace = true
ckb-app-config = { path = "../util/app-config", version = "= 0.111.0-rc5" }

[features]
portable = ["ckb-db/portable"]
march-native = ["ckb-db/march-native"]
