[package]
name = "ckb-db-migration"
version = "1.0.1"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
description = "TODO(doc): @quake crate description"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-db.workspace = true
ckb-logger.workspace = true
ckb-error.workspace = true
ckb-db-schema.workspace = true
ckb-channel.workspace = true
ckb-stop-handler.workspace = true
indicatif.workspace = true
console.workspace = true

[dev-dependencies]
tempfile.workspace = true
ckb-app-config.workspace = true

[features]
portable = ["ckb-db/portable"]
march-native = ["ckb-db/march-native"]
