[package]
name = "ckb-db"
version = "0.112.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
description = "The ckb data persistent implementation"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-app-config = { path = "../util/app-config", version = "= 0.112.0-pre" }
ckb-logger = { path = "../util/logger", version = "= 0.112.0-pre" }
ckb-error = { path = "../error", version = "= 0.112.0-pre" }
libc = "0.2"
rocksdb = { package = "ckb-rocksdb", version ="=0.20.0", features = ["snappy"], default-features = false }
ckb-db-schema = { path = "../db-schema", version = "= 0.112.0-pre" }

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
portable = ["rocksdb/portable"]
march-native = ["rocksdb/march-native"]
