[package]
name = "ckb-db"
version = "0.201.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
description = "The ckb data persistent implementation"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-app-config.workspace = true
ckb-logger.workspace = true
ckb-error.workspace = true
libc.workspace = true
rocksdb = { package = "ckb-rocksdb", version = "=0.21.1", features = [
    "snappy",
    "lz4",
], default-features = false }
ckb-db-schema.workspace = true


[dev-dependencies]
tempfile.workspace = true

[features]
default = []
portable = ["rocksdb/portable"]
march-native = ["rocksdb/march-native"]
