[package]
name = "ckb-db"
version = "1.0.2"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
description = "The ckb data persistent implementation"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-app-config.workspace = true
ckb-logger.workspace = true
ckb-error.workspace = true
libc.workspace = true
rocksdb = { workspace = true, features = [
    "snappy",
    "lz4",
], default-features = false }
ckb-db-schema.workspace = true


[dev-dependencies]
tempfile.workspace = true

[features]
default = []
portable = ["rocksdb/portable"]
march-native = ["rocksdb/march-native"]
