[package]
name = "ckb-error"
version = "1.0.2"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
description = "Underlying error types used over ckb crates"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
ckb-occupied-capacity.workspace = true
derive_more = { workspace = true, features = ["display"] }
