[package]
name = "ckb-freezer"
version = "0.100.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
description = "Freezer is an memory mapped append-only database to store immutable chain data into flat files"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = { path = "../util/types", version = "= 0.100.0-pre" }
ckb-error = { path = "../error", version = "= 0.100.0-pre" }
ckb-logger = { path = "../util/logger", version = "= 0.100.0-pre" }
ckb-util = { path = "../util", version = "= 0.100.0-pre" }
ckb-metrics = { path = "../util/metrics", version = "= 0.100.0-pre" }
fs2 = "0.4.3"
fail = "0.4"
snap = "1"
lru = "0.6.0"

[dev-dependencies]
tempfile = "3.0"


[[test]]
name = "failpoints"
path = "tests/failpoints.rs"
required-features = ["fail/failpoints"]
