[package]
name = "ckb-indexer"
version = "0.39.0"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
description = "CKB internal indexer. This is deprecated. Please use https://github.com/nervosnetwork/ckb-indexer"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-types = { path = "../util/types", version = "= 0.39.0" }
ckb-db = { path = "../db", version = "= 0.39.0" }
ckb-shared = { path = "../shared", version = "= 0.39.0" }
ckb-store = { path = "../store", version = "= 0.39.0" }
ckb-jsonrpc-types = { path = "../util/jsonrpc-types", version = "= 0.39.0" }
ckb-logger = { path = "../util/logger", version = "= 0.39.0" }
ckb-util = { path = "../util", version = "= 0.39.0" }
ckb-app-config = { path = "../util/app-config", version = "= 0.39.0" }
ckb-db-migration = { path = "../db-migration", version = "= 0.39.0" }
ckb-db-schema = { path = "../db-schema", version = "= 0.39.0" }

[dev-dependencies]
tempfile = "3.0"
ckb-chain =  { path = "../chain", version = "= 0.39.0" }
ckb-chain-spec = { path = "../spec", version = "= 0.39.0" }
ckb-resource = { path = "../resource", version = "= 0.39.0" }
