[package]
name = "ckb-miner"
version = "0.121.0"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
description = "TODO(doc): @quake crate description"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-logger = { path = "../util/logger", version = "= 0.121.0" }
ckb-app-config = { path = "../util/app-config", version = "= 0.121.0" }
ckb-types = { path = "../util/types", version = "= 0.121.0" }
ckb-channel = { path = "../util/channel", version = "= 0.121.0" }
ckb-hash = { path = "../util/hash", version = "= 0.121.0" }
ckb-pow = { path = "../pow", version = "= 0.121.0" }
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ckb-jsonrpc-types = { path = "../util/jsonrpc-types", version = "= 0.121.0" }
hyper = { version = "1", features = ["client", "http2", "http1", "server"] }
hyper-util = { version = "0.1", features = [
    "server-auto",
    "server-graceful",
    "client-legacy",
] }
http-body-util = "0.1"
hyper-tls = "0.6"
futures = "0.3"
lru = "0.7.1"
ckb-stop-handler = { path = "../util/stop-handler", version = "= 0.121.0" }
ckb-async-runtime = { path = "../util/runtime", version = "= 0.121.0" }
indicatif = "0.16"
console = ">=0.9.1, <1.0.0"
eaglesong = "0.1"
base64 = "0.21.0"
jsonrpc-core = "18.0"
tokio = { version = "1", features = ["sync"] }
