[package]
name = "ckb-network"
version = "0.120.0-rc5"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
description = "ckb network implementation"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"
exclude = ["fuzz"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
ckb-util = { path = "../util", version = "= 0.120.0-rc5" }
ckb-stop-handler = { path = "../util/stop-handler", version = "= 0.120.0-rc5" }
ckb-logger = { path = "../util/logger", version = "= 0.120.0-rc5" }
ckb-app-config = { path = "../util/app-config", version = "= 0.120.0-rc5" }
ckb-metrics = { path = "../util/metrics", version = "= 0.120.0-rc5" }
tokio = { version = "1", features = ["sync", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
ckb-systemtime = { path = "../util/systemtime", version = "= 0.120.0-rc5" }
bs58 = { version = "0.5.0", optional = true }
sentry = { version = "0.34.0", optional = true }
faster-hex = { version = "0.6", optional = true }
ckb-hash = { path = "../util/hash", version = "= 0.120.0-rc5" }
secp256k1 = { version = "0.30", features = ["recovery"], optional = true }
trust-dns-resolver = { version = "0.23", optional = true }
snap = "1"
ckb-types = { path = "../util/types", version = "= 0.120.0-rc5" }
ipnetwork = "0.20"
serde_json = "1.0"
bloom-filters = "0.1"
ckb-spawn = { path = "../util/spawn", version = "= 0.120.0-rc5" }
bitflags = "1.0"
p2p = { version = "0.6.2", package = "tentacle", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
p2p = { version = "0.6.2", package = "tentacle", default-features = false, features = [
    "upnp",
    "parking_lot",
    "openssl-vendored",
    "tokio-runtime",
    "tokio-timer",
    "ws",
] }
socket2 = "0.5"

[target.'cfg(target_family = "wasm")'.dependencies]
p2p = { version = "0.6.2", package = "tentacle", default-features = false, features = [
    "wasm-timer",
] }
idb = "0.6"
serde-wasm-bindgen = "0.6.5"


[features]
with_sentry = ["sentry"]
with_dns_seeding = ["bs58", "faster-hex", "trust-dns-resolver", "secp256k1"]
fuzz = []

[dev-dependencies]
tempfile.workspace = true
criterion = "0.5"
proptest = "1.0"
num_cpus = "1.10"
ckb-systemtime = { path = "../util/systemtime", version = "= 0.120.0-rc5", features = [
    "enable_faketime",
] }

[[bench]]
name = "peer_store"
harness = false
path = "src/benches/peer_store.rs"
