[package]
name = "ckb-notify"
version = "0.101.7-pre"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
license = "MIT"
description = "TODO(doc): @quake crate description"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-logger = { path = "../util/logger", version = "= 0.101.7-pre" }
ckb-app-config  = { path = "../util/app-config", version = "= 0.101.7-pre" }
ckb-types = { path = "../util/types", version = "= 0.101.7-pre" }
ckb-channel = { path = "../util/channel", version = "= 0.101.7-pre" }
ckb-stop-handler = { path = "../util/stop-handler", version = "= 0.101.7-pre" }

[dev-dependencies]
