[package]
name = "ckb-notify"
version = "0.108.0-rc2"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
license = "MIT"
description = "TODO(doc): @quake crate description"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-logger = { path = "../util/logger", version = "= 0.108.0-rc2" }
ckb-app-config  = { path = "../util/app-config", version = "= 0.108.0-rc2" }
ckb-types = { path = "../util/types", version = "= 0.108.0-rc2" }
ckb-stop-handler = { path = "../util/stop-handler", version = "= 0.108.0-rc2" }
ckb-async-runtime = { path = "../util/runtime", version = "= 0.108.0-rc2" }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
