[package]
name = "ckb-notify"
version = "0.201.0-pre"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
license = "MIT"
description = "TODO(doc): @quake crate description"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-logger = { workspace = true }
ckb-app-config = { workspace = true }
ckb-types = { workspace = true }
ckb-stop-handler = { workspace = true }
ckb-async-runtime = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1", features = ["sync"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["sync", "process"] }

[dev-dependencies]
