[package]
name = "ckb-pool"
version = "0.1.0"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]

[dependencies]
ckb-core = { path = "../core" }
ckb-shared = { path = "../shared" }
ckb-util = { path = "../util" }
ckb-time = { path = "../util/time" }
ckb-notify = { path = "../notify" }
ckb-verification = { path = "../verification" }
bigint = { git = "https://github.com/nervosnetwork/bigint" }
lru-cache = { git = "https://github.com/nervosnetwork/lru-cache" }
linked-hash-map = { git = "https://github.com/nervosnetwork/linked-hash-map", rev = "df27f21" }
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
rand = "0.5.0"
log = "0.4"
fnv = "1.0.3"
crossbeam-channel = "0.2"

[dev-dependencies]
env_logger = "0.4"
ckb-db = { path = "../db" }
hash = {path = "../util/hash"}
ckb-chain = { path = "../chain" }
